--- a/categories.html
+++ b/categories.html
@@ -4,11 +4,22 @@
   
     <head>
       <title>CATEGORIES</title>
+       <link rel="stylesheet" href="style.css">
       </head>
 
 
  <body>
-
+<nav>
+    <ul>
+      
+      <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
+      <li><a href="categories.html">CATEGORIES</a> </li>
+      <li><a href="upcomingmovies.html"> UPCOMING</a> </li>
+      <li><a href="Contactus.html"> CONTACT US</a>  </li>
+      <li><a href="aboutus.html"> ABOUT US</a>  </li>
+    </ul>
+  </nav>
+   
 <h1>ACTION & ADVENTURE</h1>
 <img src="p3.jpg" alt="oops">
 <h2>COMEDY</h2>
