--- a/Contactus.html
+++ b/Contactus.html
@@ -15,6 +15,16 @@
 
 
 <body>
+  <nav>
+    <ul>
+      
+      <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
+      <li><a href="categories.html">CATEGORIES</a> </li>
+      <li><a href="upcomingmovies.html"> UPCOMING</a> </li>
+      <li><a href="Contactus.html"> CONTACT US</a>  </li>
+      <li><a href="aboutus.html"> ABOUT US</a>  </li>
+    </ul>
+  </nav>
   <div class="D1">
 
 
