--- a/moviepage.html
+++ b/moviepage.html
@@ -5,21 +5,21 @@
   <head>
     <link rel="stylesheet" href="style.css">
   
-    <style>
-   .div1{
-
- width: 100%; 
- height: 100vh;
- background-color: powderblue;
-}
-
-      </style>
-
+  
   </head>
 
 
  <body>
- 
+ <nav>
+    <ul>
+      
+      <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
+      <li><a href="categories.html">CATEGORIES</a> </li>
+      <li><a href="upcomingmovies.html"> UPCOMING</a> </li>
+      <li><a href="Contactus.html"> CONTACT US</a>  </li>
+      <li><a href="aboutus.html"> ABOUT US</a>  </li>
+    </ul>
+  </nav>
 
   <header> CAST</header>
   <div1>
