--- a/upcomingmovies.html
+++ b/upcomingmovies.html
@@ -8,7 +8,16 @@
 
 
 <body>
-
+<nav>
+    <ul>
+      
+      <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
+      <li><a href="categories.html">CATEGORIES</a> </li>
+      <li><a href="upcomingmovies.html"> UPCOMING</a> </li>
+      <li><a href="Contactus.html"> CONTACT US</a>  </li>
+      <li><a href="aboutus.html"> ABOUT US</a>  </li>
+    </ul>
+  </nav>
 
  <header> CAST</header>
  <div1>
