--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
 
  <body>
 <nav>
+   <h2 class="logo">MOVIE<span> BUFF</span></h2>
     <ul>
       
       <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
