--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <title>index.html</title>
 </head>
 <body>
-  <img class="nav-logo-bg img-rounded" alt="Logo" src="C:\Users\cse21-089\OneDrive - Botswana Accountancy College\Documents\less">
+ 
   <div class="F1">
         <nav>
+           <h2 class="logo">MOVIE<span> BUFF</span></h2>
           <ul>
             
             <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
