--- a/moviepage.html
+++ b/moviepage.html
@@ -11,6 +11,7 @@
 
  <body>
  <nav>
+    <h2 class="logo">MOVIE<span> BUFF</span></h2>
     <ul>
       
       <li><a href="moviepage.html"> NOW SHOWING</a>  </li>
