--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   
-  
+   <div class="F1">
         <nav>
            <h2 class="logo">MOVIE<span> BUFF</span></h2>
           <ul>
